--- a/.github/workflows/scrape_and_save.yml
+++ b/.github/workflows/scrape_and_save.yml
@@ -1,12 +1,3 @@
-name: Scrape and Save HTML
-
-on:
-  # Schedule the action to run at a specific time (e.g., every day at midnight UTC)
-  schedule:
-    - cron: '0 0 * * *'
-  # Allow manual execution from the GitHub Actions tab
-  workflow_dispatch:
-
 jobs:
   scrape:
     runs-on: ubuntu-latest
@@ -21,7 +12,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install requests
+          pip install -r requirements.txt
+          # The next line is for playwright specifically, if you choose that option
+          # playwright install
 
       - name: Run scraper script
         run: python scrape.py
