--- a/.github/workflows/scrape_and_save.yml
+++ b/.github/workflows/scrape_and_save.yml
@@ -1,3 +1,12 @@
+name: Scrape and Save HTML
+
+on:
+  # Schedule the action to run at a specific time (e.g., every day at midnight UTC)
+  schedule:
+    - cron: '0 0 * * *'
+  # Allow manual execution from the GitHub Actions tab
+  workflow_dispatch:
+
 jobs:
   scrape:
     runs-on: ubuntu-latest
@@ -11,10 +20,9 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
+        # This command reads the requirements.txt file and installs all packages listed inside it.
         run: |
           pip install -r requirements.txt
-          # The next line is for playwright specifically, if you choose that option
-          # playwright install
 
       - name: Run scraper script
         run: python scrape.py
