--- a/.github/workflows/scrape_and_save.yml
+++ b/.github/workflows/scrape_and_save.yml
@@ -1,34 +1,28 @@
 name: Scrape and Save HTML
-
 on:
   # Schedule the action to run at a specific time (e.g., every day at midnight UTC)
   schedule:
     - cron: '0 0 * * *'
   # Allow manual execution from the GitHub Actions tab
   workflow_dispatch:
-
 jobs:
   scrape:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-
       - name: Install dependencies
         # This command reads the requirements.txt file and installs all packages listed inside it.
         run: |
           pip install -r requirements.txt
-
       - name: Run scraper script
         run: python scrape.py
-
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "Automated: Scraped HTML from temp-number.com"
-          file_pattern: 'data/*.html'
+          commit_message: "Automated: Scraped HTML and extracted JSON data from temp-number.com"
+          file_pattern: 'data/*.{html,json}'
