--- a/.github/workflows/scrape_and_save.yml
+++ b/.github/workflows/scrape_and_save.yml
@@ -8,32 +8,32 @@ on:
 jobs:
   scrape:
     runs-on: ubuntu-latest
+    env:
+      # Define the URL to scrape here. Easy to change!
+      SCRAPE_URL: "https://temp-number.com/temporary-numbers/Canada/12262433061/1"
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4 # Use latest version
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
-      - name: Create data directory if it doesn't exist
-        run: |
-          mkdir -p data
-          echo "# Data directory" > data/.gitkeep
+
       - name: Run scraper script
         run: python scrape.py
-      - name: Check for new files
-        run: |
-          git status
-          ls -la data/
-      - name: Add files to git
-        run: |
-          git add data/
+
       - name: Commit and push changes
+        # This action will only commit if `git status` shows changes.
+        # If the new file is identical to the old one, no commit is made.
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "Automated: Scraped HTML and extracted JSON data from temp-number.com"
+          commit_message: "Automated: Update scraped data for phone ID from SCRAPE_URL"
+          # Be specific about which files to check for changes.
+          file_pattern: 'data/*.*'
           skip_checkout: true
           skip_dirty_check: true
