--- a/.github/workflows/scrape_and_save.yml
+++ b/.github/workflows/scrape_and_save.yml
@@ -1,39 +1,41 @@
 name: Scrape and Save HTML
+
 on:
-  # Schedule the action to run at a specific time (e.g., every day at midnight UTC)
   schedule:
     - cron: '0 0 * * *'
-  # Allow manual execution from the GitHub Actions tab
   workflow_dispatch:
+
+permissions:
+  contents: write
+
 jobs:
   scrape:
     runs-on: ubuntu-latest
     env:
-      # Define the URL to scrape here. Easy to change!
       SCRAPE_URL: "https://temp-number.com/temporary-numbers/Canada/12262433061/1"
+
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4 # Use latest version
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
       - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
 
       - name: Run scraper script
         run: python scrape.py
 
+      # ⏱️ Keep workflow running for at least 20 seconds
+      - name: Keep job alive for 20 seconds
+        run: sleep 20
+
       - name: Commit and push changes
-        # This action will only commit if `git status` shows changes.
-        # If the new file is identical to the old one, no commit is made.
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "Automated: Update scraped data for phone ID from SCRAPE_URL"
-          # Be specific about which files to check for changes.
+          commit_message: "Automated: Update scraped data from ${{ env.SCRAPE_URL }}"
           file_pattern: 'data/*.*'
           skip_checkout: true
-          skip_dirty_check: true
