--- a/.github/workflows/scrape_and_save.yml
+++ b/.github/workflows/scrape_and_save.yml
@@ -1,9 +1,9 @@
 name: Scrape and Save HTML
 
 on:
+  workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
-  workflow_dispatch:
 
 permissions:
   contents: write
@@ -15,27 +15,17 @@ jobs:
       SCRAPE_URL: "https://temp-number.com/temporary-numbers/Canada/12262433061/1"
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
-      - name: Install dependencies
-        run: pip install -r requirements.txt
+      - run: pip install -r requirements.txt
 
-      - name: Run scraper script
-        run: python scrape.py
-
-      # ⏱️ Keep workflow running for at least 20 seconds
-      - name: Keep job alive for 20 seconds
-        run: sleep 20
-
-      - name: Commit and push changes
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "Automated: Update scraped data from ${{ env.SCRAPE_URL }}"
-          file_pattern: 'data/*.*'
-          skip_checkout: true
+      - name: Run scraper every 10 seconds
+        run: |
+          while true; do
+            python scrape.py
+            sleep 10
+          done
