--- a/.github/workflows/scrape_and_save.yml
+++ b/.github/workflows/scrape_and_save.yml
@@ -15,17 +15,32 @@ jobs:
       SCRAPE_URL: "https://temp-number.com/temporary-numbers/Canada/12262433061/1"
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
-      - run: pip install -r requirements.txt
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
-      - name: Run scraper every 10 seconds
+      - name: Run scraper every 10 seconds (30 times ≈ 5 min)
         run: |
-          while true; do
+          for i in {1..30}; do
+            echo "Run #$i"
             python scrape.py
             sleep 10
           done
+
+      - name: Show git status (debug)
+        run: |
+          git status
+          git diff --stat
+
+      - name: Commit and push changes
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "Automated: Update scraped data"
+          file_pattern: 'data/**'
