--- a/.github/workflows/run_bot.yml
+++ b/.github/workflows/run_bot.yml
@@ -1,11 +1,13 @@
-name: Run DuckDuckGo Image Gen
+name: Generate and Save Images
 
 on:
   workflow_dispatch:
 
 jobs:
-  build:
+  run-bot:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # Allows the bot to push images to your repo
 
     steps:
     - name: Checkout code
@@ -22,12 +24,20 @@ jobs:
         sudo apt-get install -y google-chrome-stable xvfb
 
     - name: Install Python Dependencies
-    # We downgrade setuptools slightly to avoid the "use_2to3" error
       run: |
         python -m pip install --upgrade pip
-        pip install "setuptools<58.0.0" 
-        pip install seleniumbase selenium-stealth requests piexif beautifulsoup4
+        pip install "setuptools<58.0.0"
+        pip install seleniumbase selenium-stealth requests
 
     - name: Run Script
       run: |
+        mkdir -p images
         xvfb-run python main.py
+
+    - name: Commit and Push Images
+      run: |
+        git config --global user.name "GitHub Action Bot"
+        git config --global user.email "actions@github.com"
+        git add images/*
+        git commit -m "Add newly generated images" || echo "No changes to commit"
+        git push
