--- a/.github/workflows/run_bot.yml
+++ b/.github/workflows/run_bot.yml
@@ -1,16 +1,16 @@
-name: Generate and Save Images
+name: Generate and Push Images
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: # Allows manual start from the Actions tab
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
     permissions:
-      contents: write # Allows the bot to push images to your repo
+      contents: write # CRITICAL: Gives the bot permission to upload files
 
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v3
 
     - name: Set up Python
@@ -18,7 +18,7 @@ jobs:
       with:
         python-version: '3.9'
 
-    - name: Install System Dependencies
+    - name: Install System Requirements
       run: |
         sudo apt-get update
         sudo apt-get install -y google-chrome-stable xvfb
@@ -26,18 +26,18 @@ jobs:
     - name: Install Python Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install "setuptools<58.0.0"
+        pip install "setuptools<58.0.0" # Fixes the PyVirtualDisplay/2to3 error
         pip install seleniumbase selenium-stealth requests
 
-    - name: Run Script
+    - name: Execute Script
       run: |
-        mkdir -p images
+        mkdir -p images # Ensure directory exists
         xvfb-run python main.py
 
-    - name: Commit and Push Images
+    - name: Commit and Push to GitHub
       run: |
         git config --global user.name "GitHub Action Bot"
         git config --global user.email "actions@github.com"
         git add images/*
-        git commit -m "Add newly generated images" || echo "No changes to commit"
+        git commit -m "Automated image generation" || echo "No changes to commit"
         git push
