--- a/.github/workflows/run_bot.yml
+++ b/.github/workflows/run_bot.yml
@@ -1,17 +1,19 @@
-name: Generate and Push Images
+name: Generate and Zip Images
 
 on:
-  workflow_dispatch: # Allows manual start from the Actions tab
+  workflow_dispatch:
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
     permissions:
-      contents: write # CRITICAL: Gives the bot permission to upload files
+      contents: write
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0 # Essential to see existing files for naming logic
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -26,18 +28,18 @@ jobs:
     - name: Install Python Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install "setuptools<58.0.0" # Fixes the PyVirtualDisplay/2to3 error
-        pip install seleniumbase selenium-stealth requests
+        pip install "setuptools<58.0.0"
+        pip install seleniumbase selenium-stealth
 
     - name: Execute Script
       run: |
-        mkdir -p images # Ensure directory exists
+        mkdir -p images
         xvfb-run python main.py
 
-    - name: Commit and Push to GitHub
+    - name: Commit and Push Zip
       run: |
         git config --global user.name "GitHub Action Bot"
         git config --global user.email "actions@github.com"
-        git add images/*
-        git commit -m "Automated image generation" || echo "No changes to commit"
+        git add images/*.zip
+        git commit -m "Add new compressed image batch" || echo "No changes to commit"
         git push
