--- a/.github/workflows/run_bot.yml
+++ b/.github/workflows/run_bot.yml
@@ -1,4 +1,4 @@
-name: Generate and Zip Images
+name: Generate Raw and NoBG Zips
 
 on:
   workflow_dispatch:
@@ -13,7 +13,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
       with:
-        fetch-depth: 0 # Essential to see existing files for naming logic
+        fetch-depth: 0
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -23,23 +23,24 @@ jobs:
     - name: Install System Requirements
       run: |
         sudo apt-get update
-        sudo apt-get install -y google-chrome-stable xvfb
+        sudo apt-get install -y google-chrome-stable xvfb libgl1
 
     - name: Install Python Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install "setuptools<58.0.0"
-        pip install seleniumbase selenium-stealth
+        pip install seleniumbase selenium-stealth opencv-python-headless numpy
 
     - name: Execute Script
       run: |
         mkdir -p images
+        mkdir -p remove
         xvfb-run python main.py
 
-    - name: Commit and Push Zip
+    - name: Commit and Push
       run: |
         git config --global user.name "GitHub Action Bot"
         git config --global user.email "actions@github.com"
-        git add images/*.zip
-        git commit -m "Add new compressed image batch" || echo "No changes to commit"
+        git add images/*.zip remove/*.zip
+        git commit -m "New batch: gen_${{ github.run_number }} and remove_${{ github.run_number }}" || echo "No changes"
         git push
