--- a/.github/workflows/run_bot.yml
+++ b/.github/workflows/run_bot.yml
@@ -41,10 +41,8 @@ jobs:
       run: |
         git config --global user.name "GitHub Action Bot"
         git config --global user.email "actions@github.com"
-        # Create folders if they don't exist to avoid git errors
-        mkdir -p images remove
-        # Use -f (force) or check if files exist before adding
-        git add images/*.zip || echo "No images zips"
-        git add remove/*.zip || echo "No remove zips"
-        git commit -m "New batch: gen_${{ github.run_number }}" || echo "No changes to commit"
-        git push
+        git pull origin main # Ensure we have latest batch numbers
+        git add images/*.zip
+        git add remove/*.zip
+        git commit -m "New batch: gen_${{ github.run_number }}" || echo "No changes"
+        git push origin main
