--- a/.github/workflows/run_bot2.yml
+++ b/.github/workflows/run_bot2.yml
@@ -42,7 +42,7 @@ jobs:
         ZIP_NUM: ${{ github.event.inputs.zip_number }}
       run: |
         mkdir -p only
-        xvfb-run python main.py
+        xvfb-run python main2.py
 
     - name: Commit and Push
       run: |
